--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="app">
 
     <section class="modal">
-      <div class="moda_container">
+      <div class="modal_container">
         <div class="modal_img">
           <img :src="produto.img" :alt="produto.nome"></img>
         </div>
